[gd_scene format=3 uid="uid://cpausemenu001"]

[ext_resource type="Script" path="res://scripts/ui/pause_menu.gd" id="1_pause"]
[ext_resource type="StyleBox" uid="uid://fm38m4ndr7q0" path="res://assets/resources/normal_button.tres" id="2_nbtn"]
[ext_resource type="StyleBox" uid="uid://dsw4tlgaid35y" path="res://assets/resources/hover_button.tres" id="3_hbtn"]

[node name="PauseMenu" type="CanvasLayer"]
layer = 100
process_mode = 3
script = ExtResource("1_pause")

[node name="Overlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="PanelContainer" type="MarginContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -160.0
offset_right = 150.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ColorRect" type="ColorRect" parent="PanelContainer"]
layout_mode = 2
color = Color(0.11, 0.11, 0.11, 0.85)

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "PAUSED"
horizontal_alignment = 1
uppercase = true

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ResumeButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_styles/normal = ExtResource("2_nbtn")
theme_override_styles/hover = ExtResource("3_hbtn")
text = "Resume"

[node name="RestartButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_styles/normal = ExtResource("2_nbtn")
theme_override_styles/hover = ExtResource("3_hbtn")
text = "Restart Level"

[node name="MainMenuButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_styles/normal = ExtResource("2_nbtn")
theme_override_styles/hover = ExtResource("3_hbtn")
text = "Main Menu"

[node name="QuitButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_styles/normal = ExtResource("2_nbtn")
theme_override_styles/hover = ExtResource("3_hbtn")
text = "Quit"
